--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <script src="valina-tilt-min.js"></script>
     <script>
       VanillaTilt.init(document.querySelectorAll(".box"), {
-        max: 25,
+        max: 15,
+        scale: 1.05,
         speed: 400,
       });
     </script>
